Первая итерация главной

--- a/index.html
+++ b/index.html
@@ -5,8 +5,70 @@
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+  <header class="gs-mainheader">
+    <div class="container">
+      <div class="gs-logo">
+        <img src="http://placehold.it/154x64" alt="" width="154" height="64">
+      </div>
+      <div class="gs-mainmenu">
+        <ul>
+          <li class="gs-mainmenu-item"><a href="#">Каталог</a></li>
+          <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
+          <li class="gs-mainmenu-item"><a href="#">О компании</a></li>
+        </ul>
+      </div>
+      <div class="gs-userblock">
+        <a class="gs-search" href="#">Поиск</a>
+        <a class="gs-login" href="#">Вход</a>
+        <a class="gs-small-cart" href="#">Пусто</a>
+        <div class="gs-phone">
+          <p>С 10 до 20, ежедневно</p>
+          <p>8 812 450-25-25</p>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main class="container">
+    <section class="gs-slider">
+      <article class="gs-slider-item">
+        <img src="http://placehold.it/644x582" alt="" width="644" height="582">
+        <h2>Крем-брюле и пломбир с малиновым джемом</h2>
+        <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
+      </article>
+      <article class="gs-slider-item">
+        <img src="http://placehold.it/644x582" alt="" width="644" height="582">
+        <h2>Шоколадный пломбир и лимонный сорбет </h2>
+        <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
+      </article>
+      <article class="gs-slider-item">
+        <img src="http://placehold.it/644x582" alt="" width="644" height="582">
+        <h2>Пломбир с помадкой и клубничный щербет</h2>
+        <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
+      </article>
+      <div class="gs-slider-buttons">
+        <input type="radio" id="slide1" name="gs-slider-buttons-item" value="slide1" checked>
+        <label for="slide1">1</label>
+        <input type="radio" id="slide2" name="gs-slider-buttons-item" value="slide2">
+        <label for="slide2">2</label>
+        <input type="radio" id="slide3" name="gs-slider-buttons-item" value="slide3">
+        <label for="slide3">3</label>
+      </div>
+    </section>
+    <section class="gs-banner">
+      <article class="gs-banner-item">
+        <h3>Малинка даром!</h3>
+        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <a class="gs-btn gs-banner-cta" href="#">Хочу варенье!</a>
+      </article>
+      <article class="gs-banner-item">
+        <h3>Шоколадки даром!</h3>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <a class="gs-btn gs-banner-cta" href="#">Хочу шоколадки!</a>
+      </article>
+    </section>
+    <section class="gs-products">
+      
+    </section>
+  </main>
   </body>
 </html>
