--- a/catalog.html
+++ b/catalog.html
@@ -14,11 +14,11 @@
         <ul>
           <li class="gs-mainmenu-item active"><a href="#">Каталог</a>
             <ul class="gs-submenu">
-              <li class="gs-submenu_item"><a href="#">Новинки</a></li>
-              <li class="gs-submenu_item"><a href="#">Сливочное</a></li>
-              <li class="gs-submenu_item"><a href="#">Щербеты</a></li>
-              <li class="gs-submenu_item"><a href="#">Фруктовый лед</a></li>
-              <li class="gs-submenu_item"><a href="#">Мелорин</a></li>
+              <li class="gs-submenu-item"><a href="#">Новинки</a></li>
+              <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
+              <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
+              <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
+              <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
           <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
@@ -33,40 +33,40 @@
           <p>С 10 до 20, ежедневно</p>
           <p>8 812 450-25-25</p>
         </div>
-      </div>
-      <div class="gs-search-form">
-        <input type="text" name="search" id="search" placeholder="Что ищем?">
-      </div>
-      <div class="gs-login-popup">
-        <form class="gs-login-form" action="#" method="post">
-          <input type="text" name="login-email" placeholder="Электронная почта">
-          <input type="text" name="login-pass" placeholder="Пароль">
-          <button class="gs-btn" type="submit">Войти</button>
-        </form>
-        <a href="#">Забыли пароль?</a>
-        <a href="#">Новая регистрация</a>
-      </div>
-      <div class="gs-small-cart-popup">
-        <ul>
-          <li>
-            <a class="gs-small-cart-delete" href="#">X</a>
-            <a href="#"><img class="gs-small-cart-img" src="http://placehold.it/33x33" alt="" width="33" height="33"></a>
-            <a class="gs-small-cart-name" href="#">Пломбир с апельсиновым джемом</a>
-            <span>1,5 кг х</span>
-            <span>200 руб.</span>
-            <span>300 руб.</span>
-          </li>
-          <li>
-            <a class="gs-small-cart-delete" href="#">X</a>
-            <a href="#"><img class="gs-small-cart-img" src="http://placehold.it/33x33" alt="" width="33" height="33"></a>
-            <a class="gs-small-cart-name" href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
-            <span>1,5 кг х</span>
-            <span>300 руб.</span>
-            <span>450 руб.</span>
-          </li>
-        </ul>
-        <span>Итого: 750 руб.</span>
-        <a class="gs-btn" href="#">Оформить заказ</a>
+        <div class="gs-search-form">
+          <input type="text" name="search" id="search" placeholder="Что ищем?">
+        </div>
+        <div class="gs-login-popup">
+          <form class="gs-login-form" action="#" method="post">
+            <input type="text" name="login-email" placeholder="Электронная почта">
+            <input type="text" name="login-pass" placeholder="Пароль">
+            <button class="gs-btn" type="submit">Войти</button>
+          </form>
+          <a href="#">Забыли пароль?</a>
+          <a href="#">Новая регистрация</a>
+        </div>
+        <div class="gs-small-cart-popup">
+          <ul>
+            <li>
+              <a class="gs-small-cart-delete" href="#">X</a>
+              <a href="#"><img class="gs-small-cart-img" src="http://placehold.it/33x33" alt="" width="33" height="33"></a>
+              <a class="gs-small-cart-name" href="#">Пломбир с апельсиновым джемом</a>
+              <span>1,5 кг х</span>
+              <span>200 руб.</span>
+              <span>300 руб.</span>
+            </li>
+            <li>
+              <a class="gs-small-cart-delete" href="#">X</a>
+              <a href="#"><img class="gs-small-cart-img" src="http://placehold.it/33x33" alt="" width="33" height="33"></a>
+              <a class="gs-small-cart-name" href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
+              <span>1,5 кг х</span>
+              <span>300 руб.</span>
+              <span>450 руб.</span>
+            </li>
+          </ul>
+          <span>Итого: 750 руб.</span>
+          <a class="gs-btn" href="#">Оформить заказ</a>
+        </div>  
       </div>
     </div>
   </header>
