--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <ul>
           <li class="gs-mainmenu-item"><a href="#">Каталог</a>
             <ul class="gs-submenu">
-              <li class="gs-submenu_item"><a href="#">Новинки</a></li>
-              <li class="gs-submenu_item"><a href="#">Сливочное</a></li>
-              <li class="gs-submenu_item"><a href="#">Щербеты</a></li>
-              <li class="gs-submenu_item"><a href="#">Фруктовый лед</a></li>
-              <li class="gs-submenu_item"><a href="#">Мелорин</a></li>
+              <li class="gs-submenu-item"><a href="#">Новинки</a></li>
+              <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
+              <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
+              <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
+              <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
           <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
@@ -33,18 +33,18 @@
           <p>С 10 до 20, ежедневно</p>
           <p>8 812 450-25-25</p>
         </div>
-      </div>
-      <div class="gs-search-form">
-        <input type="text" name="search" id="search" placeholder="Что ищем?">
-      </div>
-      <div class="gs-login-popup">
-        <form class="gs-login-form" action="#" method="post">
-          <input type="text" name="login-email" placeholder="Электронная почта">
-          <input type="text" name="login-pass" placeholder="Пароль">
-          <button class="gs-btn" type="submit">Войти</button>
-        </form>
-        <a href="#">Забыли пароль?</a>
-        <a href="#">Новая регистрация</a>
+        <div class="gs-search-form">
+          <input type="text" name="search" id="search" placeholder="Что ищем?">
+        </div>
+        <div class="gs-login-popup">
+          <form class="gs-login-form" action="#" method="post">
+            <input type="text" name="login-email" placeholder="Электронная почта">
+            <input type="text" name="login-pass" placeholder="Пароль">
+            <button class="gs-btn" type="submit">Войти</button>
+          </form>
+          <a href="#">Забыли пароль?</a>
+          <a href="#">Новая регистрация</a>
+        </div>
       </div>
     </div>
   </header>
