Последние обновления разметки
- ссылки в шапке обернул в блок gs-userblock-btn
- добавил input[type=range] в каталоге + label
- убрал span с хитам везде, т.к. будем делать через псевдокласс
- вбил боевые данные по товарам в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -26,9 +26,11 @@
         </ul>
       </div>
       <div class="gs-userblock">
-        <a class="gs-search" href="#">Поиск</a>
-        <a class="gs-login" href="#">Вход</a>
-        <a class="gs-small-cart" href="#">2 товара</a>
+        <div class="gs-userblock-btn">
+          <a class="gs-search" href="#">Поиск</a>
+          <a class="gs-login" href="#">Вход</a>
+          <a class="gs-small-cart" href="#">Пусто</a>  
+        </div>
         <div class="gs-header-phone">
           <p>С 10 до 20, ежедневно</p>
           <p>8 812 450-25-25</p>
@@ -89,7 +91,9 @@
           <option value="highprice">сначала дорогие</option>
           <option value="fat">по жирности</option>
         </select>
-        <!--Price slider HERE-->
+        <!--PRICE SLIDER-->
+        <label for="price-slider">Цена: 100 руб. &ndash; 500 руб.</label>
+        <input type="range" min="0" max="500" step="10" id="price-slider">
         <!--FATNESS RADIO-->
         <label for="10">Жирность:</label>
         <input type="radio" name="fatness" id="0" value="0">
@@ -120,7 +124,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>310 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -128,7 +131,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>380 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -136,7 +138,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>355 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -144,7 +145,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>415 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -152,66 +152,58 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>310 руб/кг</span>
+          <span>325 руб/кг</span>
         </figure>
-        <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        <a class="gs-products-item-title" href="#">Сливочное с брусничным джемом</a>
       </article>
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>380 руб/кг</span>
+          <span>410 руб/кг</span>
         </figure>
-        <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
+        <a class="gs-products-item-title" href="#">Сливочно-черничное с цельными ягодами черники</a>
       </article>
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
+          <span>375 руб/кг</span>
+        </figure>
+        <a class="gs-products-item-title" href="#">Сливочно-лимонное с карамельной присыпкой</a>
+      </article>
+      <article class="gs-products-item">
+        <figure>
+          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <span>320 руб/кг</span>
+        </figure>
+        <a class="gs-products-item-title" href="#">Сливочное с шоколадной стружкой</a>
+      </article>
+      <article class="gs-products-item">
+        <figure>
+          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <span>440 руб/кг</span>
+        </figure>
+        <a class="gs-products-item-title" href="#">Сливочно-ванильное с кусочками шоколада</a>
+      </article>
+      <article class="gs-products-item">
+        <figure>
+          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <span>435 руб/кг</span>
+        </figure>
+        <a class="gs-products-item-title" href="#">Сливочноe с ментоловым сиропом</a>
+      </article>
+      <article class="gs-products-item">
+        <figure>
+          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
           <span>355 руб/кг</span>
         </figure>
-        <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+        <a class="gs-products-item-title" href="#">Сливочное с кусочками черного шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>415 руб/кг</span>
+          <span>420 руб/кг</span>
         </figure>
-        <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
-      </article>
-      <article class="gs-products-item">
-        <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>310 руб/кг</span>
-        </figure>
-        <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-      </article>
-      <article class="gs-products-item">
-        <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>380 руб/кг</span>
-        </figure>
-        <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
-      </article>
-      <article class="gs-products-item">
-        <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>355 руб/кг</span>
-        </figure>
-        <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-      </article>
-      <article class="gs-products-item">
-        <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
-          <span>415 руб/кг</span>
-        </figure>
-        <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
+        <a class="gs-products-item-title" href="#">Сливочное с мятным сиропом</a>
       </article>
     </section>
     <div class="gs-paging">
@@ -249,4 +241,4 @@
     </div>
   </footer>
   </body>
-</html>
+—</html>
