--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         </ul>
       </div>
       <div class="gs-userblock">
-        <a class="gs-search" href="#">Поиск</a>
-        <a class="gs-login" href="#">Вход</a>
-        <a class="gs-small-cart" href="#">Пусто</a>
+        <div class="gs-userblock-btn">
+          <a class="gs-search" href="#">Поиск</a>
+          <a class="gs-login" href="#">Вход</a>
+          <a class="gs-small-cart" href="#">Пусто</a>  
+        </div>
         <div class="gs-header-phone">
           <p>С 10 до 20, ежедневно</p>
           <p>8 812 450-25-25</p>
@@ -73,6 +75,7 @@
         <input type="radio" id="slide3" name="gs-slider-buttons-item" value="slide3">
         <label for="slide3">3</label>
       </div>
+      <div class="gs-bgbody"></div>
     </section>
     <section class="gs-banner">
       <article class="gs-banner-item">
@@ -90,7 +93,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>310 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -98,7 +100,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>380 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -106,7 +107,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>355 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -114,7 +114,6 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-          <span class="gs-products-item-hit">Хит</span>
           <span>415 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
