--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <header class="gs-mainheader">
     <div class="container">
       <div class="gs-logo">
-        <a href="index.html"><img src="http://placehold.it/154x64" alt="" width="154" height="64"></a>
+        <a href="index.html"><img src="img/logo.png" alt="" width="154" height="64"></a> 
       </div>
       <div class="gs-mainmenu">
         <ul>
