--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header class="gs-mainheader">
     <div class="container">
       <div class="gs-logo">
-        <img src="img/logo.png" width="154" height="64" alt="GllacyShop" >
+        <img src="img/logo.png" width="154" height="64" alt="GllacyShop">
       </div>
       <div class="gs-mainmenu">
         <ul>
@@ -92,38 +93,28 @@
     <section class="gs-products">
       <article class="gs-products-item">
         <figure>
-<<<<<<< Updated upstream
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-=======
           <a href="#"><img src="img/tmp/1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-          <span class="gs-products-item-hit">Хит</span>
->>>>>>> Stashed changes
           <span>310 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </article>
       <article class="gs-products-item">
         <figure>
-<<<<<<< Updated upstream
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
-=======
           <a href="#"><img src="img/tmp/2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
-          <span class="gs-products-item-hit">Хит</span>
->>>>>>> Stashed changes
           <span>380 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
           <span>355 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
           <span>415 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -132,19 +123,19 @@
     <section class="gs-info">
       <h3>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
       <div class="gs-info-item">
-        <img src="http://placehold.it/49x49" alt="" width="49" height="49">
+        <img src="img/tmp/icecream.svg" width="48" height="48" alt="">
         <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
       </div>
       <div class="gs-info-item">
-        <img src="http://placehold.it/49x49" alt="" width="49" height="49">
+        <img src="img/tmp/leaf.svg" width="48" height="48" alt="">
         <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
       </div>
       <div class="gs-info-item">
-        <img src="http://placehold.it/49x49" alt="" width="49" height="49">
+        <img src="img/tmp/cow.svg" width="48" height="48" alt="">
         <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
       </div>
       <div class="gs-info-item">
-        <img src="http://placehold.it/49x49" alt="" width="49" height="49">
+        <img src="img/tmp/thermo.svg" width="48" height="48" alt="">
         <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
       </div>
     </section>
@@ -199,7 +190,7 @@
         </ul>
       </div>
       <div class="gs-author">
-        <img src="http://placehold.it/108x38" alt="" width="108" height="38">
+        <img src="img/author.svg" width="108" height="37" alt="HTML Academy">
         <p>Сделано в <a href="#">HTML Academy</a> &copy; 2016</p>
       </div>
     </div>
