--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси - Каталог</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header class="gs-mainheader">
     <div class="container">
       <div class="gs-logo">
-        <a href="index.html"><img src="img/logo.png" alt="" width="154" height="64"></a> 
+        <a href="index.html"><img src="img/logo.png" width="154" height="64" alt="GllacyShop"></a> 
       </div>
       <div class="gs-mainmenu">
         <ul>
@@ -51,7 +52,7 @@
           <ul>
             <li>
               <a class="gs-small-cart-delete" href="#">X</a>
-              <a href="#"><img class="gs-small-cart-img" src="http://placehold.it/33x33" alt="" width="33" height="33"></a>
+              <a href="#"><img class="gs-small-cart-img" src="img/tmp/1-small.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом"></a>
               <a class="gs-small-cart-name" href="#">Пломбир с апельсиновым джемом</a>
               <span>1,5 кг х</span>
               <span>200 руб.</span>
@@ -59,7 +60,7 @@
             </li>
             <li>
               <a class="gs-small-cart-delete" href="#">X</a>
-              <a href="#"><img class="gs-small-cart-img" src="http://placehold.it/33x33" alt="" width="33" height="33"></a>
+              <a href="#"><img class="gs-small-cart-img" src="img/tmp/3-small.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада"></a>
               <a class="gs-small-cart-name" href="#">Клубничный пломбир с присыпкой из белого шоколада</a>
               <span>1,5 кг х</span>
               <span>300 руб.</span>
@@ -123,84 +124,84 @@
     <section class="gs-products">
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
           <span>310 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
           <span>380 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
           <span>355 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
           <span>415 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/1-1.jpg" width="267" height="267" alt="Сливочное с брусничным джемом"></a>
           <span>325 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с брусничным джемом</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/2-1.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники"></a>
           <span>410 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-черничное с цельными ягодами черники</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/3-1.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой"></a>
           <span>375 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-лимонное с карамельной присыпкой</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/4-1.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой"></a>
           <span>320 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с шоколадной стружкой</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/1-2.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада"></a>
           <span>440 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочно-ванильное с кусочками шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/2-2.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом"></a>
           <span>435 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочноe с ментоловым сиропом</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/3-2.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада"></a>
           <span>355 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с кусочками черного шоколада</a>
       </article>
       <article class="gs-products-item">
         <figure>
-          <a href="#"><img src="http://placehold.it/200x200" alt="" width="200" height="200"></a>
+          <a href="#"><img src="img/tmp/4-2.jpg" width="267" height="267" alt="Сливочное с мятным сиропом"></a>
           <span>420 руб/кг</span>
         </figure>
         <a class="gs-products-item-title" href="#">Сливочное с мятным сиропом</a>
@@ -235,7 +236,7 @@
         </ul>
       </div>
       <div class="gs-author">
-        <img src="http://placehold.it/108x38" alt="" width="108" height="38">
+        <img src="img/author.svg" width="108" height="37" alt="HTML Academy">
         <p>Сделано в <a href="#">HTML Academy</a> &copy; 2016</p>
       </div>
     </div>
