--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси - Каталог</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -11,7 +12,7 @@
       <div class="gs-logo">
         <a href="index.html"><img src="img/logo.png" width="154" height="64" alt="GllacyShop"></a> 
       </div>
-      <div class="gs-mainmenu">
+      <nav class="gs-mainmenu">
         <ul>
           <li class="gs-mainmenu-item active"><a href="#">Каталог</a>
             <ul class="gs-submenu">
@@ -25,7 +26,7 @@
           <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
           <li class="gs-mainmenu-item"><a href="#">О компании</a></li>
         </ul>
-      </div>
+      </nav>
       <div class="gs-userblock">
         <div class="gs-userblock-btn">
           <a class="gs-search" href="#">Поиск</a>
