--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <a class="gs-login" href="#">Вход</a>
           <a class="gs-small-cart" href="#">Пусто</a>  
         </div>
-        <div class="gs-header-phone">
-          <p>С 10 до 20, ежедневно</p>
-          <p>8 812 450-25-25</p>
+        <div class="gs-header-contacts">
+          <span class="gs-header-hours">С 10 до 20, ежедневно</span>
+          <span class="gs-header-phone">8 812 450-25-25</span>
         </div>
 <!--
         <div class="gs-search-form">
@@ -205,8 +205,8 @@
       <div class="gs-footermenu">
         <ul>
           <li><a href="#">Для поставщиков</a></li>
-          <li><a href="#">О производстве</a></li>
           <li><a href="#">Наши документы</a></li>
+          <li><a href="#">О производстве</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
       </div>
