Обновил сетку проекта после обсуждения с наставником

--- a/catalog.html
+++ b/catalog.html
@@ -64,7 +64,7 @@
         <li class="gs-breadcrumbs-item"><a href="#">Сливочное</a></li>
       </ul>
     </div>
-    <h1>Сливочное мороженное</h1>
+    <h1 class="gs-catalog-title">Сливочное мороженное</h1>
     <div class="gs-filter clearfix">
       <form class="gs-filter-form" action="#" method="post">
       <!--ORDER SELECT-->
