--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Глейси</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -15,44 +16,42 @@
       <nav class="gs-mainmenu">
         <ul>
           <li class="gs-mainmenu-item"><a href="#">Каталог</a>
-<!--
             <ul class="gs-submenu">
               <li class="gs-submenu-item"><a href="#">Новинки</a></li>
               <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
-              <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
+              <li class="gs-submenu-item active"><a href="#">Щербеты</a></li>
               <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
               <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
             </ul>
--->
           </li>
-          <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
+          <li class="gs-mainmenu-item active"><a href="#">Доставка и оплата</a></li>
           <li class="gs-mainmenu-item"><a href="#">О компании</a></li>
         </ul>
       </nav>
       <div class="gs-userblock">
         <div class="gs-userblock-btn">
-          <a class="gs-search" href="#">Поиск</a>
-          <a class="gs-login" href="#">Вход</a>
-          <a class="gs-small-cart" href="#">Пусто</a>  
+          <a class="gs-top-btn gs-search" href="#">Поиск</a>
+          <a class="gs-top-btn gs-login" href="#">Вход</a>
+          <a class="gs-top-btn gs-small-cart" href="#">Пусто</a>  
         </div>
         <div class="gs-header-contacts">
           <span class="gs-header-hours">С 10 до 20, ежедневно</span>
           <span class="gs-header-phone">8 812 450-25-25</span>
         </div>
-<!--
         <div class="gs-search-form">
-          <input type="text" name="search" id="search" placeholder="Что ищем?">
+          <form action="#" method="post">
+            <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
+          </form>
         </div>
         <div class="gs-login-popup">
           <form class="gs-login-form" action="#" method="post">
-            <input type="text" name="login-email" placeholder="Электронная почта">
-            <input type="text" name="login-pass" placeholder="Пароль">
+            <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
+            <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
             <button class="gs-btn" type="submit">Войти</button>
           </form>
           <a href="#">Забыли пароль?</a>
           <a href="#">Новая регистрация</a>
         </div>
--->
       </div>
     </div>
   </header>
@@ -105,16 +104,22 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
-          <span class="gs-products-item-price">310 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>310</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
-          <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </div>
       </article>
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
-          <span class="gs-products-item-price">380 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>380</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -123,7 +128,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
-          <span class="gs-products-item-price">355 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>355</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -132,7 +140,10 @@
       <article class="gs-products-item">
         <figure>
           <a href="#"><img src="img/tmp/4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
-          <span class="gs-products-item-price">415 руб/кг</span>
+          <div class="gs-products-item-price">
+            <span>415</span>
+            <span>/кг</span>
+          </div>
         </figure>
         <div class="gs-products-item-title">
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
@@ -160,40 +171,46 @@
     </section>
     <section class="gs-marketing clearfix">
       <div class="gs-blog-lastitem">
-        <p>Новое в нашем блоге</p>
+        <span>Новое в нашем блоге</span>
         <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
       </div>
       <div class="gs-subscribe">
-        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
-        <form action="#" method="post">
-          <input type="text" name="email" id="email" placeholder="Электронная почта">
-          <button type="submit">Отправить</button>
-        </form>
+        <div class="gs-subscribe-content">
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =) </p>
+          <form action="#" method="post">
+            <input class="gs-input" type="text" name="email" id="email" placeholder="Электронная почта">
+            <button class="gs-btn" type="submit">Отправить</button>
+          </form>  
+        </div>
       </div>
-    </section>
-    <section class="gs-contacts">
-      <div class="gs-contacts-info">
-        <p>Адрес главного офиса и офлайн магазина:</p>
-        <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-        <p>Для заказов по телефону:</p>
-        <p>8 812 450-25-25</p>
-        <p>(с 10 до 20 ежедневно)</p>
-        <a class="gs-btn gs-contacts-feedback" href="#">Форма обратной связи</a>
-      </div>
-<!--
-      <div class="gs-feedback-popup">
-        <h4>Мы обязательно вам ответим!</h4>
-        <a href="#">X</a>
-        <form class="gs-feedback-form" action="#" method="post">
-          <input type="text" name="feedback-name" id="feedback-name" placeholder="Как вас зовут?">
-          <input type="text" name="feedback-email" id="feedback-email" placeholder="Ваша почта для ответа?">
-          <textarea name="feedback-text" id="feedback-text" cols="30" rows="10">Напишите что-нибудь...</textarea>
-        <button class="gs-btn" type="submit">Отправить</button>
-        </form>
-      </div>
--->
     </section>
   </main>
+  <section class="gs-contacts">
+    <div class="container">
+      <div class="gs-contacts-content">
+        <div class="gs-contacts-info">
+          <p>Адрес главного офиса и офлайн магазина:</p>
+          <p class="gs-contacts-address">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+          <p>Для заказов по телефону:</p>
+          <p class="gs-contacts-phone">8 812 450-25-25</p>
+          <p>(с 10 до 20 ежедневно)</p>
+          <a class="gs-btn gs-contacts-feedback" href="#">Форма обратной связи</a>
+        </div>
+      </div>
+  <!--
+        <div class="gs-feedback-popup">
+          <h4>Мы обязательно вам ответим!</h4>
+          <a href="#">X</a>
+          <form class="gs-feedback-form" action="#" method="post">
+            <input class="gs-input" type="text" name="feedback-name" id="feedback-name" placeholder="Как вас зовут?">
+            <input class="gs-input" type="text" name="feedback-email" id="feedback-email" placeholder="Ваша почта для ответа?">
+            <textarea name="feedback-text" id="feedback-text" cols="30" rows="10">Напишите что-нибудь...</textarea>
+          <button class="gs-btn" type="submit">Отправить</button>
+          </form>
+        </div>
+  -->  
+    </div>
+  </section>
   <footer class="gs-mainfooter">
     <div class="container clearfix">
       <div class="gs-footer-socials">
