Работа над детализацией

--- a/catalog.html
+++ b/catalog.html
@@ -14,16 +14,16 @@
       </div>
       <nav class="gs-mainmenu">
         <ul>
-          <li class="gs-mainmenu-item"><a href="#">Каталог</a>
+          <li class="gs-mainmenu-item active"><a href="#">Каталог</a>
             <ul class="gs-submenu">
               <li class="gs-submenu-item"><a href="#">Новинки</a></li>
-              <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
-              <li class="gs-submenu-item active"><a href="#">Щербеты</a></li>
+              <li class="gs-submenu-item active"><a>Сливочное</a></li>
+              <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
               <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
               <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li class="gs-mainmenu-item active"><a href="#">Доставка и оплата</a></li>
+          <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
           <li class="gs-mainmenu-item"><a href="#">О компании</a></li>
         </ul>
       </nav>
