--- a/index.html
+++ b/index.html
@@ -18,70 +18,68 @@
           <li class="gs-mainmenu-item"><a href="#">Каталог</a>
             <ul class="gs-submenu">
               <li class="gs-submenu-item"><a href="#">Новинки</a></li>
-              <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
-              <li class="gs-submenu-item active"><a href="#">Щербеты</a></li>
+              <li class="gs-submenu-item"><a href="catalog.html">Сливочное</a></li>
+              <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
               <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
               <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
             </ul>
           </li>
-          <li class="gs-mainmenu-item active"><a href="#">Доставка и оплата</a></li>
+          <li class="gs-mainmenu-item"><a href="#">Доставка и оплата</a></li>
           <li class="gs-mainmenu-item"><a href="#">О компании</a></li>
         </ul>
       </nav>
       <div class="gs-userblock">
         <div class="gs-userblock-btn">
           <a class="gs-top-btn gs-search" href="#">Поиск</a>
+          <div class="gs-search-form">
+            <form action="#" method="get">
+              <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
+            </form>
+          </div>
           <a class="gs-top-btn gs-login" href="#">Вход</a>
-          <a class="gs-top-btn gs-small-cart" href="#">Пусто</a>  
+          <div class="gs-login-popup">
+            <form class="gs-login-form" action="#" method="post">
+              <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
+              <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
+              <button class="gs-btn" type="submit">Войти</button>
+            </form>
+            <a class="gs-black-link" href="#">Забыли пароль?</a>
+            <a class="gs-black-link" href="#">Новая регистрация</a>
+          </div>
+          <a class="gs-top-btn gs-small-cart">Пусто</a>  
         </div>
         <div class="gs-header-contacts">
           <span class="gs-header-hours">С 10 до 20, ежедневно</span>
           <span class="gs-header-phone">8 812 450-25-25</span>
-        </div>
-        <div class="gs-search-form">
-          <form action="#" method="post">
-            <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
-          </form>
-        </div>
-        <div class="gs-login-popup">
-          <form class="gs-login-form" action="#" method="post">
-            <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
-            <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
-            <button class="gs-btn" type="submit">Войти</button>
-          </form>
-          <a href="#">Забыли пароль?</a>
-          <a href="#">Новая регистрация</a>
         </div>
       </div>
     </div>
   </header>
   <main class="container">
     <section class="gs-slider">
-      <article class="gs-slider-item">
+      <div class="gs-slider-buttons">
+        <input type="radio" id="btn1" name="gs-slider-buttons-item" value="slide1" checked>
+        <label for="btn1">1</label>
+        <input type="radio" id="btn2" name="gs-slider-buttons-item" value="slide2">
+        <label for="btn2">2</label>
+        <input type="radio" id="btn3" name="gs-slider-buttons-item" value="slide3">
+        <label for="btn3">3</label>
+      </div>
+      <article class="gs-slider-item" id="slide1">
         <img src="img/tmp/slide1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
         <h2>Крем-брюле и пломбир с малиновым джемом</h2>
         <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
       </article>
-<!--
-      <article class="gs-slider-item">
+      <article class="gs-slider-item" id="slide2">
         <img src="img/tmp/slide2.png" width="644" height="582" alt="Шоколадный пломбир и лимонный сорбет">
         <h2>Шоколадный пломбир и лимонный сорбет</h2>
         <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
       </article>
-      <article class="gs-slider-item">
+      <article class="gs-slider-item" id="slide3">
         <img src="img/tmp/slide3.png" width="639" height="582" alt="Пломбир с помадкой и клубничный щербет">
         <h2>Пломбир с помадкой и клубничный щербет</h2>
         <a class="gs-btn gs-slider-cta" href="#">Давайте оба!</a>
       </article>
--->
-      <div class="gs-slider-buttons">
-        <input type="radio" id="slide1" name="gs-slider-buttons-item" value="slide1" checked>
-        <label for="slide1">1</label>
-        <input type="radio" id="slide2" name="gs-slider-buttons-item" value="slide2">
-        <label for="slide2">2</label>
-        <input type="radio" id="slide3" name="gs-slider-buttons-item" value="slide3">
-        <label for="slide3">3</label>
-      </div>
       <div class="gs-bgbody"></div>
     </section>
     <section class="gs-banner clearfix">
@@ -229,7 +227,7 @@
       </div>
       <div class="gs-author">
         <img src="img/author.svg" width="108" height="37" alt="HTML Academy">
-        <p>Сделано в <a href="#">HTML Academy</a> &copy; 2016</p>
+        <p>Сделано в <a class="gs-white-link" href="#">HTML Academy</a> &copy; 2016</p>
       </div>
     </div>
   </footer>
