--- a/catalog.html
+++ b/catalog.html
@@ -10,14 +10,14 @@
   <header class="gs-mainheader">
     <div class="container clearfix">
       <div class="gs-logo">
-        <img src="img/logo.png" width="154" height="64" alt="GllacyShop">
+        <a href="index.html"><img src="img/logo.png" width="154" height="64" alt="GllacyShop"></a>
       </div>
       <nav class="gs-mainmenu">
         <ul>
-          <li class="gs-mainmenu-item active"><a href="#">Каталог</a>
+          <li class="gs-mainmenu-item"><a href="#">Каталог</a>
             <ul class="gs-submenu">
               <li class="gs-submenu-item"><a href="#">Новинки</a></li>
-              <li class="gs-submenu-item active"><a>Сливочное</a></li>
+              <li class="gs-submenu-item"><a href="#">Сливочное</a></li>
               <li class="gs-submenu-item"><a href="#">Щербеты</a></li>
               <li class="gs-submenu-item"><a href="#">Фруктовый лед</a></li>
               <li class="gs-submenu-item"><a href="#">Мелорин</a></li>
@@ -30,26 +30,26 @@
       <div class="gs-userblock">
         <div class="gs-userblock-btn">
           <a class="gs-top-btn gs-search" href="#">Поиск</a>
+          <div class="gs-search-form">
+            <form action="#" method="get">
+              <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
+            </form>
+          </div>
           <a class="gs-top-btn gs-login" href="#">Вход</a>
-          <a class="gs-top-btn gs-small-cart" href="#">Пусто</a>  
+          <div class="gs-login-popup">
+            <form class="gs-login-form" action="#" method="post">
+              <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
+              <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
+              <button class="gs-btn" type="submit">Войти</button>
+            </form>
+            <a class="gs-black-link" href="#">Забыли пароль?</a>
+            <a class="gs-black-link" href="#">Новая регистрация</a>
+          </div>
+          <a class="gs-top-btn gs-small-cart">Пусто</a>  
         </div>
         <div class="gs-header-contacts">
           <span class="gs-header-hours">С 10 до 20, ежедневно</span>
           <span class="gs-header-phone">8 812 450-25-25</span>
-        </div>
-        <div class="gs-search-form">
-          <form action="#" method="post">
-            <input class="gs-input" type="text" name="search" id="search" placeholder="Что ищем?">  
-          </form>
-        </div>
-        <div class="gs-login-popup">
-          <form class="gs-login-form" action="#" method="post">
-            <input class="gs-input" type="text" name="login-email" placeholder="Электронная почта">
-            <input class="gs-input" type="text" name="login-pass" placeholder="Пароль">
-            <button class="gs-btn" type="submit">Войти</button>
-          </form>
-          <a href="#">Забыли пароль?</a>
-          <a href="#">Новая регистрация</a>
         </div>
       </div>
     </div>
@@ -57,9 +57,9 @@
   <main class="container clearfix">
     <div class="gs-breadcrumbs">
       <ul>
-        <li class="gs-breadcrumbs-item"><a href="index.html">Главная</a></li>
-        <li class="gs-breadcrumbs-item"><a href="catalog.html">Каталог</a></li>
-        <li class="gs-breadcrumbs-item"><a href="#">Сливочное</a></li>
+        <li class="gs-breadcrumbs-item"><a class="gs-white-link" href="index.html">Главная</a></li>
+        <li class="gs-breadcrumbs-item"><a class="gs-white-link" href="catalog.html">Каталог</a></li>
+        <li class="gs-breadcrumbs-item"><a class="gs-white-link">Сливочное</a></li>
       </ul>
     </div>
     <h1 class="gs-catalog-title">Сливочное мороженное</h1>
@@ -121,6 +121,9 @@
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
+        </div>
       </article>
       <article class="gs-products-item">
         <figure>
@@ -129,6 +132,9 @@
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-кофейное с кусочками шоколада</a>
+        </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -139,6 +145,9 @@
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
+        </div>
       </article>
       <article class="gs-products-item">
         <figure>
@@ -147,6 +156,9 @@
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное крем-брюле с карамельной подливкой</a>
+        </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -157,6 +169,9 @@
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с брусничным джемом</a>
         </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
+        </div>
       </article>
       <article class="gs-products-item">
         <figure>
@@ -165,6 +180,9 @@
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-черничное с цельными ягодами черники</a>
+        </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -175,6 +193,9 @@
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-лимонное с карамельной присыпкой</a>
         </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
+        </div>
       </article>
       <article class="gs-products-item">
         <figure>
@@ -183,6 +204,9 @@
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с шоколадной стружкой</a>
+        </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -193,6 +217,9 @@
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочно-ванильное с кусочками шоколада</a>
         </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
+        </div>
       </article>
       <article class="gs-products-item">
         <figure>
@@ -201,6 +228,9 @@
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочноe с ментоловым сиропом</a>
+        </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
         </div>
       </article>
       <article class="gs-products-item">
@@ -211,6 +241,9 @@
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с кусочками черного шоколада</a>
         </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
+        </div>
       </article>
       <article class="gs-products-item">
         <figure>
@@ -219,6 +252,9 @@
         </figure>
         <div class="gs-products-item-title">
           <a class="gs-products-item-title" href="#">Сливочное с мятным сиропом</a>
+        </div>
+        <div class="gs-products-item-view">
+          <a class="gs-btn" href="#">Быстрый просмотр</a>
         </div>
       </article>
     </section>
@@ -244,15 +280,15 @@
       </div>
       <div class="gs-footermenu">
         <ul>
-          <li><a href="#">Для поставщиков</a></li>
-          <li><a href="#">О производстве</a></li>
-          <li><a href="#">Наши документы</a></li>
-          <li><a href="#">Экологические стандарты</a></li>
+          <li><a class="gs-white-link" href="#">Для поставщиков</a></li>
+          <li><a class="gs-white-link" href="#">Наши документы</a></li>
+          <li><a class="gs-white-link" href="#">О производстве</a></li>
+          <li><a class="gs-white-link" href="#">Экологические стандарты</a></li>
         </ul>
       </div>
       <div class="gs-author">
         <img src="img/author.svg" width="108" height="37" alt="HTML Academy">
-        <p>Сделано в <a href="#">HTML Academy</a> &copy; 2016</p>
+        <p>Сделано в <a class="gs-white-link" href="#">HTML Academy</a> &copy; 2016</p>
       </div>
     </div>
   </footer>
